--- a/css/styles.css
+++ b/css/styles.css
@@ -1,194 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap');
-
 :root {
-    --text: #f7faf0;
-    --background: #090c04;
-    --primary: #7e5dcb;
-    --secondary: #b11885;
-    --accent: #613cb9;
+    --text-50: #f9ecf0;
+    --text-100: #f2d9e1;
+    --text-200: #e6b3c3;
+    --text-300: #d98ca6;
+    --text-400: #cc6688;
+    --text-500: #bf406a;
+    --text-600: #993355;
+    --text-700: #732640;
+    --text-800: #4d192a;
+    --text-900: #260d15;
+    --text-950: #13060b;
+
+    --background-50: #faebee;
+    --background-100: #f5d6dd;
+    --background-200: #ebadbb;
+    --background-300: #e08598;
+    --background-400: #d65c76;
+    --background-500: #cc3354;
+    --background-600: #a32943;
+    --background-700: #7a1f32;
+    --background-800: #521422;
+    --background-900: #290a11;
+    --background-950: #140508;
+
+    --primary-50: #faeaef;
+    --primary-100: #f6d5df;
+    --primary-200: #edabbf;
+    --primary-300: #e3829f;
+    --primary-400: #da587f;
+    --primary-500: #d12e5f;
+    --primary-600: #a7254c;
+    --primary-700: #7d1c39;
+    --primary-800: #541226;
+    --primary-900: #2a0913;
+    --primary-950: #150509;
+
+    --secondary-50: #fbe9ef;
+    --secondary-100: #f8d3de;
+    --secondary-200: #f1a7bd;
+    --secondary-300: #ea7b9c;
+    --secondary-400: #e2507c;
+    --secondary-500: #db245b;
+    --secondary-600: #af1d49;
+    --secondary-700: #841536;
+    --secondary-800: #580e24;
+    --secondary-900: #2c0712;
+    --secondary-950: #160409;
+
+    --accent-50: #fce8ee;
+    --accent-100: #fad1dd;
+    --accent-200: #f5a3bc;
+    --accent-300: #f0759a;
+    --accent-400: #eb4778;
+    --accent-500: #e61957;
+    --accent-600: #b81445;
+    --accent-700: #8a0f34;
+    --accent-800: #5c0a23;
+    --accent-900: #2e0511;
+    --accent-950: #170309;
 }
 
 body {
-    background-color: var(--background);
-    font-family: 'Inter', sans-serif;
-    color: var(--text);
-    top: 0;
-    margin: 0;
-    height: 100vh;
+    background-color: var(--background-50);
+    font-family: 'ClashDisplay-Variable';
+}
+
+#logo-front {
+    width: 124px;
+    height: 124px;
+    filter: drop-shadow(0 0 0.75rem var(--accent-200));
+}
+
+#front {
+    width: 100%;
     display: flex;
-    justify-content: center;
+    padding-top: 200px;
+    justify-content: flex-start;
     align-items: center;
+    height: 50vh;
     flex-direction: column;
-    gap: 20px;
-}
-
-.color-effect {
-    background: linear-gradient(120deg, var(--primary), var(--accent));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-h1 {
-    font-size: 48px;
-}
-
-#container-main {
-    height: 500px;
-    width: auto;
-    display: flex;
-    padding: 20px 20px 20px 20px;
-    gap: 20px;
-}
-
-#container-left,
-#container-right {
-    width: 500px;
-    padding: 10px 10px 10px 10px;
-}
-
-#container-left {
-    display: flex;
-    justify-content: stretch;
-    align-items: flex-start;
-    flex-direction: column;
-}
-
-#container-right {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-direction: column;
-    gap: 10px;
-}
-
-#subtitle {
     font-size: 24px;
+    gap: 24px;
 }
 
-bubble {
-    background-color: var(--accent);
-    height: 150px;
-    width: 350px;
-    border-radius: 33px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+#front-text {
+    max-width: 50%;
+    text-align: justify;
+    text-align-last: justify;
+    background: linear-gradient(45deg, #b93d46, #f60040);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent; 
+    display: inline-block;
 }
 
-.button {
-    width: 100px;
-    height: auto;
-    border-radius: 10px;
-    padding: 10px 15px 10px 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    gap: 5px;
-    transition: all .2s ease-in-out;
+#front-subtext {
+    color: var(--text-700);
+    max-width: 50%;
+}
+
+#front-download {
+    border: none;
+    background-color: var(--accent-500);
+    padding: 8px 16px;
+    color: var(--text-50);
+    border-radius: 18px;
+    font-size: 18px;
     cursor: pointer;
 }
 
-.button:hover {
-    transform: translate(0, -3px);
-}
-
-#button-download {
-    background-color: var(--accent);
-}
-
-#button-download:hover {
-    box-shadow: 0 20px 80px -10px var(--primary);
-}
-
-#button-github {
-    background-color: var(--secondary);
-}
-
-.button>img {
-    height: 24px;
-}
-
-#container-buttons {
-    display: flex;
-    gap: 10px;
-}
-
-#container-bottom {
-    height: 100px;
-    width: 1060px;
-    padding: 10px 30px 10px 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-}
-
-#container-user,
-#container-price {
-    height: 75px;
-    border-radius: 33px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#container-user {
-    background-color: var(--primary);
-    width: 60%;
-}
-
-#container-price {
-    background-color: var(--secondary);
-    width: 350px;
-}
-
-#vandal-icon {
-    height: 70px;
-}
-
-.container-stats {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-#rank-icon {
-    height: 60px;
-}
-
-#container-rank {
-    display: flex;
-    flex-direction: column;
-}
-
-#rank_progress_text {
-    color: var(--background);
+#front-download-subtext {
     font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#rank-progressbar {
-    margin-top: 7px;
-    margin-bottom: 5px;
-    width: 200px;
-    height: 7px;
-    background-color: var(--background);
-    border-radius: 3px;
-}
-
-#rank-progress {
-    width: 43%;
-    height: 7px;
-    border-radius: 3px;
-    background-color: var(--secondary);
-}
-
-.container-stats>span:last-child {
-    font-weight: 400;
+    color: var(--text-700);
 }
